# wifite2

./: .coverage  .dccache  .flake8  .gitignore  .travis.yml  AbasedWordlist.txt  CHANGELOG  Decimal to binary  Dockerfile  EVILTWIN.md  MANIFEST.in  Makefile  PMKID.md  README.md  TODO.md  Wifite.py  changelog  generated.john  ieee-oui.txt  pyproject.toml  requirements.txt  runtests.sh  setup.cfg  setup.py  wordlist-probable.txt  wordlist-top4800-probable.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: --feature-request.md  --other.md  bug-report.md  bug_report.md  other.md
.github/workflows/: action.yml  checkpr-sourcery.yml  codeql-analysis.yml  codeql.yml  dependabot-auto-approve.yml  dependabot-metadata.yml  dependency-review.yml  ossar-analysis.yml  python-publish.yml  renovate.json  scorecards.yml  snyk-analysis.yml  snyk-container-analysis.yml  snyk-infrastructure-analysis.yml  snyk-security.yml  sourcery.yml  trivy-analysis.yml
docs/: EVILTWIN.md  PMKID.md  TODO.md
py/: Aircrack.py  Aireplay.py  Airmon.py  Airodump.py  Arguments.py  Attack.py  AttackWEP.py  AttackWPA.py  AttackWPA.py.orig  AttackWPS.py  Bully.py  CapFile.py  Client.py  Color.py  Configuration.py  CrackHandshake.py  CrackResult.py  CrackResultWEP.py  CrackResultWPA.py  CrackResultWPS.py  Handshake.py  Interface.py  Macchanger.py  Process.py  Reaver.py  Scanner.py  Target.py  Tshark.py  WPAResult.py  Wash.py
py/tests/: test_Handshake.py  test_Target.py
py/tests/files/: airmon.output  contains_wps_network.cap  handshake_exists.cap  handshake_not_exists.cap  wep-uncrackable.ivs
tests/: pytest.ini  test_Airmon.py  test_Airodump.py  test_Handshake.py  test_Target.py  test_flake8.sh  tox.ini
tests/files/: airodump-weird-ssids.csv  airodump.csv  handshake_exists.cap.stripped.tshark  handshake_has_1234.cap  wep-crackable.ivs
tools/: fetch-oui  fetch-oui.sh  pycodestyle.py  remove-duplicates.py  run-automation.sh  wash
tools/ath_masker/: Makefile  README.md  ath_masker.c  dkms-install.sh  dkms-remove.sh  dkms.conf  load.sh
tools/modwifi/: Makefile  install.sh
tools/modwifi/ath9k-htc/: .gitignore  LICENCE.TXT  Makefile  NOTICE.TXT  README  build.sh
tools/modwifi/ath9k-htc/target_firmware/: .gitignore  CMakeLists.txt  Makefile  configure  firmware-crc.pl  install.sh  ram-k2.ld  ram-magpie.ld  rom-addrs-magpie.ld
tools/modwifi/ath9k-htc/target_firmware/wlan/: _ieee80211.h  ah.c  ah.h  ah_desc.h  ah_internal.h  ah_osdep.c  ah_osdep.h  ar5416.h  ar5416Phy.c  ar5416_hw.c  ar5416_phy.c  ar5416desc.h  ar5416reg.h  attacks.c  attacks.h  debug.c  debug.h  ieee80211.h  ieee80211_linux.h  ieee80211_node.h  ieee80211_output.c  ieee80211_proto.h  ieee80211_var.h  if_ath.c  if_ath_pci.c  if_ath_pci.h  if_athrate.h  if_athvar.h  if_llc.h  if_owl.c  modwifi.h  ratectrl.h  ratectrl11n.h  ratectrl_11n_ln.c
tools/modwifi/ath9k-htc/target_firmware/wlan/include/: athdefs.h  htc.h  htc_services.h  wlan_hdr.h  wmi.h
tools/modwifi/ath9k-htc/target_firmware/wlan/include/k2/: wlan_cfg.h
tools/modwifi/ath9k-htc/target_firmware/wlan/include/magpie/: wlan_cfg.h
tools/modwifi/backports/: .gitignore  README  copy-list  dependencies  gentree.py  release.sh
tools/modwifi/tools/: .gitignore  CMakeLists.txt  ClientInfo.cpp  ClientInfo.h  MacAddr.cpp  MacAddr.h  SeqnumInfo.h  SeqnumStats.cpp  SeqnumStats.h  SeqnumType.cpp  SeqnumType.h  channelmitm.cpp  chopstate.cpp  chopstate.h  constantjam.cpp  crc.cpp  crc.h  crypto.cpp  crypto.h  eapol.cpp  eapol.h  fastreply.cpp  ieee80211header.h  osal_nl.cpp  osal_nl.h  osal_wi.cpp  osal_wi.h  pcap.cpp  pcap.h  reactivejam.cpp  release.sh  util.cpp  util.h
tools/pyrit/: CHANGELOG  MANIFEST.in  Pyrit-logo.ai  README.md  pyrit  pyrit_cli.py  setup.py
tools/pyrit/cpyrit/: _cpyrit_cpu.c  _cpyrit_cpu.h  _cpyrit_cpu_sse2.S  config.py  cpufeatures.h  cpyrit.py  (+4 more)
wifite/: __main__.py  args.py  config.py  crack.py  wifite.py
wifite/attack/: all.py  eviltwin.py  pmkid.py  wep.py  wpa.py  wps.py
wifite/krauseling/: arduinoHandler.py  krauseling.py  rssiStreamHandler.py
wifite/model/: attack.py  client.py  handshake.py  interface.py  krauseling.py  pmkid_result.py  result.py  target.py  wep_result.py  wpa_result.py  wps_result.py
wifite/tools/: aircrack.py  aireplay.py  airmon.py  airodump.py  bully.py  cowpatty.py  dependency.py  dnsmasq.py  eviltwin_server.py  hashcat.py  hostapd.py  ifconfig.py  ip.py  iptables.py  iw.py  iwconfig.py  john.py  macchanger.py  pyrit.py  reaver.py  tshark.py  wash.py
wifite/util/: color.py  crack.py  deauther.py  input.py  process.py  scanner.py  timer.py
(+469 files in other folders)
